--- a/my-react-frontend/src/index.html
+++ b/my-react-frontend/src/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/calendar.png" />
+    <link rel="icon" type="image/png" href="./assets/calendar.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Event List</title>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./main.tsx"></script>
   </body>
 </html>
